--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    namespace 'com.equalizer.flutter.equalizer_flutter'
     compileSdkVersion 31
 
     compileOptions {
